<resources>


    <!-- TODO Change those Ad ID by your own Ad ID -->
    <!-- app ad section real keys -->
    <!--         <string name="app_ad_id">ca-app-pub-9522824014864088~3368818347</string>-->
    <!-- old banner key -->
    <!--        <string name="banner_ad_unit_id">ca-app-pub-9522824014864088/9779341693</string>-->
    <!--     new banner key-->
    <!--            <string name="banner_ad_unit_id">ca-app-pub-9522824014864088/7328021257</string>-->
    <!-- old interstitial key -->
    <!--        <string name="interstitial_ad_unit_id">ca-app-pub-9522824014864088/8466260020</string>-->
    <!-- new interstitial key -->
    <!--           <string name="interstitial_ad_unit_id">ca-app-pub-9522824014864088/6014939581</string>-->

    <!--        <string name="native_ad_unit_id">ca-app-pub-9522824014864088/2055736676</string>-->
    <!-- end of the ad section -->

    <!-- app ad test section -->
    <string name="app_ad_id">ca-app-pub-9522824014864088~3368818347</string>
    <!-- end of the ad section -->


    <!-- App MetaData -->
    <string name="app_name">Expense Tracker</string>


    <!-- Common Strings -->
    <string name="copied">Copied to clipboard.</string>
    <string name="share">Install Spending Tracker app from:</string>
    <string name="saved_to">Saved to:\n</string>


    <string name="error_file">File not found</string>
    <string name="error_unknown">Unknown error</string>
    <string name="menu_spending">Spending</string>
    <string name="menu_history">History</string>
    <string name="menu_category">Category</string>
    <string name="menu_accounts">Accounts</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>


    <!-- Categories Strings -->
    <string name="category_details">Category Details</string>

    <string name="cat_exp_fuel">Fuel</string>
    <string name="cat_exp_clothes">Clothes</string>
    <string name="cat_exp_general">General</string>
    <string name="cat_exp_sports">Sports</string>
    <string name="cat_exp_travel">Travel</string>
    <string name="cat_exp_gifts">Gifts</string>
    <string name="cat_exp_eating_out">Eating Out</string>
    <string name="cat_exp_entertainment">Entertainment</string>
    <string name="cat_exp_holidays">Holidays</string>

    <!-- Income Strings -->
    <string name="cat_inc_salary">Salary</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="category">Categories</string>
    <string name="category_name">Name</string>
    <string name="personal">Personal</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="no_icon_selected">No Icon Selected</string>
    <string name="account_details">Account Details</string>
    <string name="account_name">Account Name</string>
    <string name="delete">Delete</string>
    <string name="baby_icon">Baby Icons</string>
    <string name="graph_stats">Stats</string>
    <!-- Strings used for fragments for navigation -->

    <string name="expensesInvoice">Expenses Invoice</string>
    <string name="incomeInvoice">Income Invoice</string>
    <string name="loading">Loading</string>
    <string name="month_name">January</string>
    <string name="current_balance">Current Balance</string>
    <string name="balanceAmount">0.0</string>
    <string name="currencySymbols">$</string>
    <string name="savingPercent">+0% savings</string>
    <string name="total_budget">Total Budget</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="budget_amount">0.0</string>
    <string name="income_amount">0.0</string>
    <string name="expense_amount">0.0</string>
    <string name="transaction_txt">Current Transaction</string>
    <string name="note">Irregular</string>
    <string name="menu_home">Home</string>
    <string name="iconTxt">Icons</string>
    <string name="transaction_amount">Amount</string>
    <string name="default_date">02/02/2022</string>
    <string name="transaction_category">Category</string>
    <string name="add_auto_for_next_months">Auto Add For Next Months</string>
    <string name="set_reminder">Set Reminder For Next Months</string>
    <string name="transaction_notes">Notes</string>
    <string name="type_text">Type your notes here</string>
    <string name="confirm">Confirm</string>
    <string name="text_inside_circle_button_text_normal">txt inside</string>
    <string name="text_outside_circle_button_text_normal">txt outside circle</string>
    <string name="text_ham_button_text_normal">ham button</string>
    <string name="text_ham_button_sub_text_normal">ham button sub</string>
    <string name="Select_category">Select Category</string>
    <string name="permission_not_granted">permission not granted</string>
    <string name="account_string">Accounts</string>
    <string name="add_new_acc">Create New Account</string>
    <string name="select_icon">Select Icon</string>
    <string name="view_all">View All</string>
    <string name="savings">Savings</string>
    <string name="view_details">View Details</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_message_item">Are You sure you want to delete this Account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_transaction_item">Are You sure you want to delete this transaction?</string>
    <string name="delete_category_item">Are you sure you want to delete this category?</string>
    <string name="add_exp_string">Your Expense Is Added \n Successfully!</string>
    <string name="your_opinion">Your Opinion Matters \nTo Us!</string>
    <string name="submit">Submit</string>
    <string name="noThanks">No Thanks</string>
    <string name="budget">Budget</string>
    <string name="color">Category Color</string>
    <string name="month_date">07/02/2022</string>
    <string name="currency">Currency Symbols</string>
    <string name="country_currency_dialog_title">Select Currency</string>
    <string name="rate_us">Rate Us</string>
    <string name="time">Time</string>
    <string name="time_val">12:00</string>
    <string name="saving">savings</string>
    <string name="noData">No data available</string>
    <string name="motivational_quote">It is precious to set some Time a day to set your Transactions on Income and Expenses </string>
    <string name="title_slide_1">Greetings!</string>
    <string name="title_slide_5">Title Slide 5</string>
    <string name="description_slide_5">Description Slide 5</string>
    <string name="title_slide_6">Title Slide 6</string>
    <string name="description_slide_6">Description Slide 6</string>
    <string name="title_slide_8">Title Slide 7</string>
    <string name="description_slide_8">Description Slide 8</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="motivational_quote_txt">Expense Tracker - an app to track income and expense with ease</string>
    <string name="previous_balance">Want to add any Previous Cash Amount</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>

    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="night">Good Night</string>
    <string name="personal_info_txt">We do not collect any of your personal data</string>
    <string name="all_ready">All Ready</string>
    <string name="to_go">To GO!</string>
    <string name="selct_currency">Select Currency Symbol</string>
    <string name="done">Done</string>

    <string name="addTooltip">To get started,simply add your \'Expense\' or \'Income\' using the below button</string>
    <string name="budgetTooltip">Here you can add your \'Monthly Budget\'  by tapping on it and see your monthly spending against your monthly budget</string>
    <string name="category_center">Here you can add ,update, and delete your category</string>
    <string name="incomeExpenseTooltip">For each new Transaction you need to specify atleast the \'Date\', \'Amount\', and \'Category\'.</string>
    <string name="uploadBackup">Upload to Google Drive</string>
    <string name="restoreBackup">Restore Drive Backups</string>
    <string name="message_google_sign_in_failed">Sign in Failed</string>
    <string name="message_drive_client_is_ready">Google Drive client is ready</string>

</resources>