<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_spending"
        android:icon="@drawable/home_white"
        android:title="@string/menu_home"
        app:showAsAction="withText"
        />


    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/histoy_white"
        android:title="@string/menu_history"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_category"
        android:title="@string/menu_category"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/nav_graph"
        android:icon="@drawable/stats_white"
        android:title="@string/graph_stats"
        app:showAsAction="withText"
    />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/account_white"
        android:title="@string/menu_accounts"
        app:showAsAction="withText"
        />




</menu>
