<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/title_slide_1"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/blackish_txt"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/motivational_quote_txt"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/personal_info_txt"
            android:textAlignment="center"
            android:textColor="@color/blackish_txt"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>
</FrameLayout>