<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReminderScreen"
    android:background="@color/background_screen_color"
    >



    <TextView
        android:id="@+id/reminder_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/item_bg"
        android:textSize="22sp"
        />



    <RelativeLayout
        android:layout_below="@+id/reminder_txt"
        android:id="@+id/reminder_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_15"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="8dp"
        >





        <ImageView
            android:id="@+id/reminder_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/reminder"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/reminder_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerVertical="true"
            />


        <TextView
            android:id="@+id/reminder_time"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_val"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerVertical="true"
            />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/reminder_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="@dimen/dp_10"
        android:elevation="8dp"
        android:layout_below="@+id/reminder_item"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivational_quote"
            android:textColor="@color/blackish_txt"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            />

    </RelativeLayout>


</RelativeLayout>