<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/all_ready"
            android:textColor="@color/blackish_txt"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/to_go"
            android:textColor="@color/blackish_txt"
            android:textSize="22sp" />

        <RelativeLayout
            android:id="@+id/change_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_15"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp">


            <TextView
                android:id="@+id/currency_symbol_sel"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/currency_bg"
                android:gravity="center"
                android:text="@string/currencySymbols"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/currency_symbol_sel"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/selct_currency"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cash_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:visibility="gone"
            >

            <LinearLayout
                android:id="@+id/add_cash_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/previous_balance"
                    android:textColor="@color/blackish_txt"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/add_cash_txt"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_6"
                android:elevation="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/add_amount_relative"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/bg_9"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp">

                        <TextView
                            android:id="@+id/currency_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/currencySymbols"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <EditText
                            android:id="@+id/pre_save_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_toEndOf="@+id/currency_symbol"
                            android:background="@drawable/bg_9"
                            android:fontFamily="@font/poppins_semibold"
                            android:hint="@string/balanceAmount"
                            android:inputType="numberDecimal"
                            android:textColor="@color/blackish_txt"
                            android:textColorHint="@color/lightWhite"
                            android:textSize="22sp" />

                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>