<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/md_transparent"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="8dp"
        android:background="@drawable/bg_1"
        >

        <LinearLayout
            android:id="@+id/weekly_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/weekly"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@+id/weekly_linear"
            android:id="@+id/monthly_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/bg_5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/monthly"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@+id/monthly_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/yearly"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>
